# multimedia-gst-aml-utils

./: README
aml-log/: Makefile  aml_log.c
aml-log/inc/: aml_log.h
detect-library/: Makefile  detect.cpp  detect_log.c
detect-library/inc/: detect_log.h  nn_demo.h  nn_detect.h  nn_detect_common.h  nn_sdk.h  nn_util.h
detect-library/nn_data/aml_face_detection/: aml_face_detection_A0003.adla
detect-library/nn_input/: Readme.txt  save_bin.py
detect-sample/: Makefile  Readme.txt  main.cpp
dma-allocator/: Makefile  dma_allocator.c  dma_log.c
dma-allocator/inc/: dma_allocator.h  dma_log.h
gst-aml-dma-allocator/: Makefile  gstamldmaallocator.c
gst-aml-dma-allocator/inc/: gstamldmaallocator.h
gst-aml-gfx2d/: Makefile  gfx_2d.c  gfx_2d_private.c  gfx_2d_private.h  gst_ge2d.c
gst-aml-gfx2d/inc/: gfx_2d.h  gst_ge2d.h
gst-aml-imgproc/: Makefile  imgproc.c
gst-aml-imgproc/inc/: imgproc.h
gst-aml-ion-allocator/: Makefile  gstamlionallocator.c
gst-aml-ion-allocator/inc/: gstamlionallocator.h
gst-aml-videotranscoding/: Makefile  video_transcoding.c
gst-aml-videotranscoding/inc/: video_transcoding.h
gst-jpeg-swdec/: Makefile  jpeg.c
gst-jpeg-swdec/inc/: jpeg.h
gst-plugin-conv/: AUTHORS  COPYING  ChangeLog  README  configure.ac
gst-plugin-conv/src/: Makefile.am  gstamlvconv.c  gstamlvconv.h
gst-plugin-nn/: AUTHORS  COPYING  ChangeLog  README  configure.ac
gst-plugin-nn/src/: Makefile.am  facedb.c  facedb.h  gstamlnn.c  gstamlnn.h
gst-plugin-overlay/: AUTHORS  COPYING  ChangeLog  README  configure.ac
gst-plugin-overlay/src/: Makefile.am  gstamlbaseoverlay.c  gstamlbaseoverlay.h  gstamlnnoverlay.c  gstamlnnoverlay.h  gstamloverlay.c
nndemo-library/: Makefile
nndemo-library/include/common/: nn_util.h  sdk_log.h
nndemo-library/include/demo/: cv_postprocess.h  imagelabel.h  postprocess_util.h
nndemo-library/src/demo/verisilicon/: cv_postprocess.cpp  cv_postprocess_util.c  face_det_attr_reg_postprocess.c  image_cls_obj_seg_postprocess.c  model_aiface.c  model_aml_person_detect.c  model_retinaface.c  model_rfb_face_detect.c  model_yolo_postprocess.c  person_pose_postprocess.cpp  postprocess_util.c  traffic_postprocess.cpp
videotranscoding-demo/: Makefile  README  videotranscoding_demo.c
